force-app/main/default/objects/Snapshot_Paciente__c/Snapshot_Paciente__c.object-meta.xml
<CustomObject>
    <label>Snapshot_Paciente</label>
    <nameField>
        <label>Nombre de SnapshotPaciente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot_Pacientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>