force-app/main/default/objects/Snapshot_Paciente__c/fields/Area_Terapeutica__c.field-meta.xml
<CustomField>
    <fullName>Area_Terapeutica__c</fullName>
    <label>Area Terapeutica</label>
    <length>50</length>
    <type>Text</type>
</CustomField>