force-app/main/default/objects/Snapshot_Paciente__c/fields/Estado_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Paciente__c</fullName>
    <label>Estado de Paciente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>