force-app/main/default/objects/Snapshot_Paciente__c/fields/Id_paciente__c.field-meta.xml
<CustomField>
    <fullName>Id_paciente__c</fullName>
    <label>Id paciente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>