force-app/main/default/objects/Snapshot_Paciente__c/fields/Obra_social__c.field-meta.xml
<CustomField>
    <fullName>Obra_social__c</fullName>
    <label>Obra social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>