force-app/main/default/objects/Snapshot_Paciente__c/fields/Patologia__c.field-meta.xml
<CustomField>
    <fullName>Patologia__c</fullName>
    <label>Patologia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>