force-app/main/default/objects/Snapshot_Paciente__c/fields/Subestado_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Subestado_de_Paciente__c</fullName>
    <label>Subestado de Paciente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>