force-app/main/default/objects/Snapshot_Paciente__c/fields/Tipo_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Paciente__c</fullName>
    <label>Tipo de Paciente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>